# Auralis

./: .coverage  .env  .flake8  .gitignore  .mutmut-config.py  .python-version  ADAPTIVE_LOUDNESS_INTEGRATION.md  ADAPTIVE_MIGRATION_STRATEGY.md  ADAPTIVE_PROCESSING_PIPELINE.md  ALBUM_ARTWORK_FIX.md  ALPHA_RELEASE_READY.md  API_CONTRACT_AUDIT.md  APPIMAGE_BUILD_REPORT.md  APPIMAGE_RUNTIME_VERIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REFACTORING_STATUS.md  AUDIO_PLAYBACK_STATUS.md  AUDIO_PROCESSING_UI_IMPLEMENTATION.md  AURALIS_CORE_PRINCIPLE_NO_ASSUMPTIONS.md  AURALIS_DESIGN_SUMMARY.md  AURALIS_DESIGN_SYSTEM_COMPLETE.md  AURALIS_INTEGRATION_PLAN.md  AURALIS_ROADMAP.md  AURALIS_WEB_READY.md  BACKEND_74_PERCENT_ACHIEVEMENT.md  BACKEND_COVERAGE_COMPLETE.md  BACKEND_INTEGRATION_PLAN.md  BACKEND_INTEGRATION_STATUS.md  BACKEND_REFACTORING_PLAN.md  BACKEND_REFACTORING_ROADMAP.md  BACKEND_TESTING_SUMMARY.md  BACKEND_TESTS_100_PERCENT.md  BENCHMARK_RESULTS_FINAL.md  BETA11_RELEASE_PLAN.md  BETA1_KNOWN_ISSUES.md  BETA1_RELEASE_SUMMARY.md  BETA2_PROGRESS_OCT26.md  BETA2_TESTING_GUIDE.md  BETA3_ROADMAP.md  (+295 more)
.claude/: settings.json  settings.local.json.backup
.github/: INTEGRATION_GUIDE.md
auralis/: __init__.py  __version__.py  version.py
auralis-web/: PHASE_7_ARCHITECTURAL_FIX.md  PHASE_7_VIEWING_GUIDE.md  README.md  start-dev.bat  start-dev.sh
desktop/: error.html  main-updated.js  main.js  package.json  pnpm-lock.yaml  preload.js
docs/: ADR-002-PHASE-7-5-CACHE-INTEGRATION.md  ADR-003-WEBSOCKET-PROTOCOL.md  ARTIST_ARTWORK.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE_25D_MASTERING.md  IMPLEMENTATION_SUMMARY_25D_ADAPTIVE_MASTERING.md  LESSON_LEARNED_ASYNC_FIRST.md  MASTER_ROADMAP.md  MODERNIZATION_ROADMAP.md  PACKAGE_MIGRATION_2026-02-21.md  PHASE25_2B_FINDINGS.md  PHASE2_COMPLETION_REPORT.md  PHASE_10_PLAN.md  PHASE_3_COMPLETE.md  PHASE_3_YIN_IMPLEMENTATION_PLAN.md  PHASE_4_ALGORITHM_STUDY.md  PHASE_4_CHROMA_CQT_COMPLETE.md  PHASE_B_2_COMPLETION.md  PHASE_C_2_COMPLETION.md  PHASE_C_2_PLAN.md  PHASE_C_3_PLAN.md  QUICK_REFERENCE_25D_MASTERING.md  README.md  README_RUST_DSP_INTEGRATION.md  RELEASE_1_1_0_FINGERPRINT_REFACTORING.md  RUST_DSP_EXTRACTION_PLAN.md  STAGE_7_PHASE_1_COMPLETION_REPORT.md  STAGE_7_SESSION_SUMMARY.md  STAGE_7_TEST_IMPLEMENTATION_PROGRESS.md  STAGE_7_TEST_QUICK_START.md  STAGE_7_TEST_SUITE_COMPLETION.md  STAGE_7_TEST_SUITE_PLAN.md  STYLE_GUIDE_AUDIT.md  TESTING_PLAN.md  UI_STYLE_GUIDE.md
examples/: advanced_text_output.py  fingerprint_normalization_demo.py
fingerprint-server/: Cargo.toml
fingerprint-server/src/: error.rs  main.rs
fingerprint-server/src/analysis/: analyzer.rs  mod.rs  rhythm.rs  yin.rs
fingerprint-server/src/api/: fingerprint.rs  health.rs  mod.rs
fingerprint-server/src/audio/: loader.rs  mod.rs
fingerprint-server/src/models/: fingerprint.rs  mod.rs  request.rs
matchering/: checker.py
output_diverse_test/: results.json  results2.json
output_diverse_test2/: results.json
output_diverse_test3/: results.json
output_diverse_test4/: results.json
output_diverse_test5/: results.json
output_diverse_test6/: results.json
output_diverse_test7/: results.json
output_diverse_test8/: results.json
output_diverse_test9/: results.json
profiles/: acdc_highway_to_hell_2003.json  bob_marley_legend_2002.json  dio_holy_diver_2005.json  exodus_fabulous_disaster_user_remaster.json  joe_satriani_cant_go_back_2014.json  power_metal_blind_guardian.json  rush_farewell_to_kings_1977.json  rush_presto_1989.json  steven_wilson_normal_2024.json  steven_wilson_prodigal_2021.json
research/: PAPER_OUTLINE.md  README.md  (+1 more)
(+2699 files in other folders)
