[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matchering-player"
version = "1.1.0.beta.5"
description = "Professional-grade media player with real-time audio remastering capabilities"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Matías Zanolli" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "sounddevice>=0.4.5",
    "soundfile>=0.10.0",
    "audioread>=3.0.0",
    "librosa>=0.9.0",
    "websockets>=10.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "PyQt6>=6.2.0",  # For development UI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.17.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pylint>=2.14.0",
    "pre-commit>=2.17.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
pretty = true
show_error_codes = true
show_error_context = true

# Core library type checking (strict)
[[tool.mypy.overrides]]
module = "auralis.*"
strict = true

# Backend services type checking (strict - our new code)
[[tool.mypy.overrides]]
module = "auralis-web.backend.services.*"
strict = true

# Backend cache type checking (strict)
[[tool.mypy.overrides]]
module = "auralis-web.backend.cache.*"
strict = true

# Optional: Gradual typing for other backend modules (less strict during migration)
[[tool.mypy.overrides]]
module = "auralis-web.backend.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.hatch.build.targets.wheel]
packages = ["auralis"]

# Pytest configuration is defined in pytest.ini (takes precedence over pyproject.toml)