[package]
name = "fingerprint-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Audio I/O
symphonia = { version = "0.5", features = ["all"] }
claxon = "0.4"  # Pure Rust FLAC decoder (handles all FLAC variants)

# DSP operations
ndarray = "0.15"
num-complex = "0.4"
rustfft = "6.1"
rayon = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
lru = "0.12"
parking_lot = "0.12"

[[bin]]
name = "fingerprint-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
